--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -131,7 +131,7 @@
     <h3>Hand Interaction Framework</h3>
     <p>An early prototype hand interaction system for VR applications</p>
     <ul>
-      <li>Founder Hand Interaction Framework, a virtual reality project focused on hand-tracking & haptics.</li>
+      <li>Founded Hand Interaction Framework, a virtual reality project focused on hand-tracking & haptics.</li>
       <li>Coordinated weekly work-sessions to design and develop an accurate hand-interaction API in the form of a Unity Asset for the Oculus Quest 2 platform.</li>
       <li>Created a working Proof-of-Concept, as well as a 1.0 release implementing seamless grabbing and manipulation of objects in virtual environments via Unity and C#.</li>
     </ul>
